Update on select image text caption